--- a/src/Web/KPIWeb/appsettings.Development.json
+++ b/src/Web/KPIWeb/appsettings.Development.json
@@ -1,9 +1,45 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "ConnectionStrings": {
+    "RMS": "Data Source=.;Trusted_Connection=True;Persist Security Info=True;Initial Catalog=RMS;MultipleActiveResultSets=True;",
+    "CRM": "Data Source=svr-tstsqlapps\\test;Trusted_Connection=True;Persist Security Info=True;Initial Catalog=CRM;MultipleActiveResultSets=True;",
+    "ErrorLog": "server=.;database=ErrorLog;Integrated Security=true",
+    "Repairs": "server=.;database=Repair;Integrated Security=true",
+    "DataProtection": "Data Source=svr-tstsqlapps\\test;database=DataProtection;Trusted_Connection=True;",
+    "KPI": "Server=.;Database=KPI;Trusted_Connection=True;"
+  },
+
+  "IdentitySettings": {
+    "Authority": "https://authority-test.incommunities.co.uk/",
+    "ClientId": "TaskManagerDevelopment",
+    "SignedOutRedirectUri": "https://localhost:44371/"
+  },
+
+  "HttpClientSettings": {
+    "CRMApiUri": "http://localhost:53055/api",
+    "RMSApiUri": "http://localhost:53055/api/RMS",
+    "DocumentApiUri": "http://localhost:50434/api/",
+    "BingMapUrl": "http://www.bing.com/api/maps/mapcontrol?callback=GetMap",
+    "AssetApiUri": "https://assetsapi-test.incommunities.co.uk/api/Assets",
+    "TaskManagerApiUri": "http://localhost:44373/api/",
+    "IdentityApiUri": "https://identityapi-test.incommunities.co.uk/api/",
+    "KPIApiUri": "https://localhost:44339/api/"
+  },
+
+  "WebApplicationSettings": {
+    "AssetUrl": "https://assets-test.incommunities.co.uk/",
+    "VblUrl": "https://vbl-stage.incommunities.co.uk/",
+    "CloudVoidsUrl": "https://voids-stage.incommunities.co.uk/",
+    "DebtAssistUrl": "http://localhost:7000/",
+    "TaskManagerUrl": "https://localhost:44371",
+    "KPIApiUrl": "https://localhost:44339/api/",
+    "EnvironmentName": "KPI Local"
+  },
+  "CrmUrl": "https://crm-test.incommunities.co.uk"
 }
