--- a/src/Services/KPService/KP.API/appsettings.json
+++ b/src/Services/KPService/KP.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "KpConnection": "Data Source=localhost;Initial Catalog=KPI2;Integrated Security=SSPI;Persist Security Info=True;MultipleActiveResultSets=True;"
+  },
   "AllowedHosts": "*"
 }
