update ef config

--- a/src/Services/KPService/KP.API/appsettings.json
+++ b/src/Services/KPService/KP.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "KpConnection": "Data Source=localhost;Initial Catalog=KPI2;Integrated Security=SSPI;Persist Security Info=True;MultipleActiveResultSets=True;"
+    "KpConnection": "Server=.;Database=KPI2;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
