update simple implementation

--- a/src/Services/KPService/KP.Infrastructure/KP.Infrastructure.csproj
+++ b/src/Services/KPService/KP.Infrastructure/KP.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
 			<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
@@ -14,6 +15,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KP.Domain\KP.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mapper\" />
   </ItemGroup>
 
 </Project>
